# second-graph

./: .gitignore  README.md  TODO.md  changes.md  graph-agent.md  graph.md  ideas.md  pyproject.toml  son_plan.md  task.md  tool_plan.md  tools.md
.opencode/agents/: graph-agent.md
archive/graph/: visualize.py
experimental/extract_tui/: README.md  __init__.py  core.py  main.py  test_core.py
scripts/: start-test-neo4j.sh
src/: cli.py
src/extraction/: __init__.py  merger.py  reader.py  tracker.py
src/extraction/tests/: test_tracker.py
src/graph/: builder.py  history.py  neo4j_storage.py  routing_text.py  scanner.py  schema.py  sync.py  visualize.py
src/graph/tests/: test_builder.py  test_history.py  test_neo4j_storage.py  test_routing_text.py  test_scanner.py  test_schema.py  test_sync.py  test_sync_source.py
src/mcp/: __init__.py  server.py
src/mcp/tests/: test_server.py
src/parser/: markdown.py  vault.py
src/retrieval/: __init__.py  config.py  hook_entrypoint.py  pipeline.py  ranker.py  renderer.py  tokenize.py  traversal.py  types.py
src/retrieval/tests/: test_ranker.py  test_renderer.py  test_traversal.py
src/vector/: __init__.py  embedder.py  store.py
src/vector/tests/: test_store.py
tests/: __init__.py  test_graph_resolution.py
tests/graph/: neo4j_test_config.py  test_neo4j_storage.py  test_scanner.py  test_sync.py  test_sync_source.py
tests/mcp/: test_server.py
tests/retrieval/: test_pipeline.py  test_tokenize.py
