[project]
name = "obsidian-brain"
version = "0.1.0"
description = "Knowledge graph for Obsidian vaults - AI agent memory system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "networkx>=3.6.1",
    "openai>=2.16.0",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.2",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.2",
]

[project.scripts]
obsidian-brain = "src.cli:cli"
