[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "second-graph"
version = "0.1.0"
description = "Knowledge graph for Obsidian vaults - AI agent memory system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "mcp>=1.0.0",
    "neo4j>=6.1.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.2",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
obsidian-brain = "src.cli:cli"
obsidian-brain-mcp = "src.mcp:main"

[tool.setuptools]
packages = ["src", "src.graph", "src.parser", "src.vector", "src.extraction", "src.mcp", "src.retrieval"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["archive", "data", "dist", "experimental"]
asyncio_mode = "auto"
